# AgenTick

./: .gitignore  .prettierignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.agentick-bootstrap/: TRIGGER2  source.b64.00  source.b64.01a  source.b64.01b  source.b64.02  source.b64.03a  source.b64.03b  source.b64.04
.agentick-update/: fix.patch.b64  patch.b64.000  patch.b64.001  patch.b64.002  patch.b64.003  source.b64.000
.github/: format-site-existing.trigger  format-site-once.trigger  update-postgres-migration.trigger
.github/workflows/: bootstrap-source.yml  bootstrap.yml  ci.yml  export-source.yml  format-domain-schema.yml  format-packaging-final.yml  format-packaging-fix.yml  format-registry-upgrade.yml  format-site-existing.yml  format-site-once.yml  format-theme.yml  format-watch-fix.yml  rename-skillib.yml  rust-release.yml  rust.yml  update-packaging-lock.yml  update-postgres-migration.yml  update-site-lock.yml  update-skillib-runtime-lock.yml
.turbo/cache/: 2412cb5ef12a0a1e-manifest.json  2412cb5ef12a0a1e-meta.json  246eae63d352e966-manifest.json  246eae63d352e966-meta.json  246eae63d352e966.tar.zst  27b8ccc09c8db197-manifest.json  27b8ccc09c8db197-meta.json  27b8ccc09c8db197.tar.zst  3497179fc704baa8-manifest.json  3497179fc704baa8-meta.json  3497179fc704baa8.tar.zst  393d00226ed8c699-manifest.json  393d00226ed8c699-meta.json  45131f5163d63220-manifest.json  45131f5163d63220-meta.json  4b7ac95c86fe3ec1-manifest.json  4b7ac95c86fe3ec1-meta.json  4b7ac95c86fe3ec1.tar.zst  6366ed4c0d62bc92-manifest.json  6366ed4c0d62bc92-meta.json  6366ed4c0d62bc92.tar.zst  6ab2e6b0e18ca29f-manifest.json  6ab2e6b0e18ca29f-meta.json  6ab2e6b0e18ca29f.tar.zst  853f7d340fb6e786-manifest.json  853f7d340fb6e786-meta.json  853f7d340fb6e786.tar.zst  89f3dad5d195d053-manifest.json  89f3dad5d195d053-meta.json  89f3dad5d195d053.tar.zst  8ea039400a38c3c2-manifest.json  8ea039400a38c3c2-meta.json  8ea039400a38c3c2.tar.zst  975affae6b7c648c-manifest.json  975affae6b7c648c-meta.json  9990c22d332a0629-manifest.json  9990c22d332a0629-meta.json  9b2d6300c98d57a0-manifest.json  9b2d6300c98d57a0-meta.json  a0058ef6ee53fac2-manifest.json  (+24 more)
agents/: AGENTS.md  INSTRUCTIONS.md  README.md  agentick.yml  skillib.yml  skills.lock.yml
agents/architecture/: ARCHITECTURE.md  STRUCTURE.md
agents/patterns/: README.md
agents/rules/: RULES.md
agents/skills/: README.md
agents/templates/: README.md
agents/work/: AUDIT.md  HANDOFF.md  PLAN.md  REGISTRY_UPGRADE_PLAN.md  RUST_TOOLCHAIN_PLAN.md  RUST_TOOLCHAIN_TASKS.md  STATUS.md  TASKS.md
agents/workflows/: AUDIT.md  DEVELOPMENT.md
apps/site/: .env.example  drizzle.config.ts  next.config.ts  package.json  proxy.ts  tsconfig.json
apps/site/app/: accessibility.css  auth.css  globals.css  join.css  layout.tsx  page.tsx
apps/site/app/account/: account-overview.css  account.css  error.tsx  layout.tsx  loading.tsx  page.tsx
apps/site/app/account/organisations/: organisations.css  page.tsx
apps/site/app/account/profile/: page.tsx
apps/site/app/guides/: page.tsx
apps/site/app/join/: page.tsx
apps/site/app/login/: page.tsx
apps/site/app/signup/: page.tsx
apps/site/app/skills/: page.tsx  registry.css
apps/site/components/: account-nav.tsx  auth-context-panel.tsx  auth-form.tsx  border-beam.tsx  form-field.tsx  grid-pattern.tsx  join-organisation-form.tsx  logo.tsx  organisation-manager.tsx  publish-skill-form.tsx  registry-search.tsx  reveal.tsx  session-manager.tsx  site-footer.tsx  site-header.tsx  skill-card.tsx  skill-readme.tsx  stamp.tsx  syntax-highlight.tsx  theme-toggle.tsx  tick.tsx  token-manager.tsx  wave-divider.tsx
apps/site/components/ui/: button.tsx  input.tsx  switch.tsx
apps/site/drizzle/: 0000_initial_postgres.sql  0000a_prepare_domain_registry.sql  0001_domain_registry.sql  0002_skillib_language_releases.sql
apps/site/drizzle/meta/: _journal.json
apps/site/lib/: format.ts
apps/site/lib/account/: security.ts  service.ts
apps/site/lib/auth/: constants.ts  crypto.ts  dal.ts  mail.ts  service.ts  session.ts
apps/site/lib/db/: client.ts  schema.sql  schema.ts  url.ts
apps/site/lib/events/: bus.ts  dispatcher.ts
apps/site/lib/registry/: discovery.ts  language-contract.ts  language-registry.ts  service.ts  version.test.ts  version.ts
crates/skillib-ast/: Cargo.toml
crates/skillib-ast/src/: declarations.rs  lib.rs  skill.rs  value.rs
crates/skillib-cli/: Cargo.toml
crates/skillib-cli/src/: args.rs  language.rs  main.rs  project.rs  registry_cmd.rs  root.rs  ui.rs  update_cmd.rs  watch_cmd.rs
crates/skillib-compiler/: Cargo.toml
crates/skillib-compiler/src/: lib.rs
crates/skillib-compiler/tests/: extensions.rs
crates/skillib-diagnostics/: Cargo.toml
crates/skillib-diagnostics/src/: lib.rs
crates/skillib-formatter/: Cargo.toml
crates/skillib-formatter/src/: lib.rs
crates/skillib-ir/: Cargo.toml
crates/skillib-ir/src/: lib.rs
crates/skillib-lsp/: Cargo.toml
crates/skillib-lsp/src/: lib.rs  server.rs  transport.rs
crates/skillib-package/: Cargo.toml
crates/skillib-package/src/: archive.rs  cache.rs  lib.rs  lockfile.rs
crates/skillib-parser/: Cargo.toml
crates/skillib-parser/src/: lib.rs  line.rs  named.rs  simple.rs  value.rs
crates/skillib-registry/: Cargo.toml
crates/skillib-registry/src/: client.rs  http.rs  lib.rs  models.rs  token.rs
crates/skillib-runtime/: Cargo.toml
crates/skillib-runtime/src/: error.rs  events.rs  inputs.rs  lib.rs  plan.rs
crates/skillib-semantic/: Cargo.toml
crates/skillib-semantic/src/: lib.rs  lower.rs  lower_events.rs  lower_inputs.rs  lower_sources.rs  model.rs  validate.rs
crates/skillib-source/: Cargo.toml
crates/skillib-source/src/: lib.rs
crates/skillib-syntax/: Cargo.toml
crates/skillib-syntax/src/: lib.rs
crates/skillib-watcher/: Cargo.toml
crates/skillib-watcher/src/: config.rs  engine.rs  event.rs  history.rs  lib.rs
docs/: architecture.md  registry.md  research.md  roadmap.md  skills.md
scripts/: install-skillib-global.mjs
(+40 files in other folders)
