[workspace]
resolver = "2"
members = [
  "crates/skillib-source",
  "crates/skillib-diagnostics",
  "crates/skillib-syntax",
  "crates/skillib-ast",
  "crates/skillib-parser",
  "crates/skillib-semantic",
  "crates/skillib-ir",
  "crates/skillib-compiler",
  "crates/skillib-formatter",
  "crates/skillib-package",
  "crates/skillib-registry",
  "crates/skillib-watcher",
  "crates/skillib-runtime",
  "crates/skillib-lsp",
  "crates/skillib-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "GPL-3.0-only"
repository = "https://github.com/alidantech-org/AgenTick"

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
blake3 = "1.8.2"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.41", features = ["derive"] }
console = "0.16.0"
ignore = "0.4.23"
notify = "8.1.0"
reqwest = { version = "0.12.22", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tower-lsp-server = "0.22.1"
url = { version = "2.5.4", features = ["serde"] }
walkdir = "2.5.0"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
