[package]
name = "skillib-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
skillib-diagnostics = { path = "../skillib-diagnostics" }
skillib-ir = { path = "../skillib-ir" }
skillib-parser = { path = "../skillib-parser" }
skillib-semantic = { path = "../skillib-semantic" }
skillib-source = { path = "../skillib-source" }

[lints]
workspace = true
