[package]
name = "skillib-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
skillib-compiler = { path = "../skillib-compiler" }
skillib-source = { path = "../skillib-source" }

[lints]
workspace = true
