[package]
name = "skillib-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
skillib-ast = { path = "../skillib-ast" }
skillib-diagnostics = { path = "../skillib-diagnostics" }
skillib-source = { path = "../skillib-source" }
skillib-syntax = { path = "../skillib-syntax" }

[lints]
workspace = true
