[package]
name = "skillib-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
skillib-ir = { path = "../skillib-ir" }
thiserror.workspace = true

[lints]
workspace = true
