[package]
name = "skillib-watcher"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
ignore.workspace = true
notify.workspace = true
serde.workspace = true
serde_json.workspace = true
skillib-compiler = { path = "../skillib-compiler" }
skillib-source = { path = "../skillib-source" }
tokio.workspace = true

[lints]
workspace = true
